--- a/calc.css
+++ b/calc.css
@@ -3,6 +3,10 @@
     text-align: center;
     color: white;
 }
+h3 {
+    margin-top: 0;
+    margin-bottom: 0;
+}
 /* Inputs */
 @media (max-width: 720px) {
     button{
@@ -13,6 +17,9 @@
         border-style: inset;
         padding-right: 10px;
         padding-left: 10px;
+        font-size: 26px !important;
+        padding-right: 15px !important;
+        padding-left: 15px !important; 
     }
     .row {
         line-height: 55px;
@@ -24,11 +31,6 @@
     .Enter {
         width: 95% !important;
     }
-    button{
-        font-size: 26px !important;
-        padding-right: 15px !important;
-        padding-left: 15px !important;  
-    }
     #buttonClicked{
         transform: translateY(1px) !important;
         border-width: 1px !important;
@@ -37,43 +39,47 @@
 }
 .input{
     height: 50px;
+    
 }
 #display {
-    background-color: rgba(255, 255, 255, 0.521);
-    width:  85%;
+    background-color: white;
+    width:  90%;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 10px;
+    margin-bottom: 5px;
     text-align: right;
-    font-size: 20px;
+    font-size: 17px;
     color: rgb(0, 0, 0);
     padding-right: 20px ;
+    border-radius: 10%;
+    
 }
 .olds{
     font-size: 20px;
     opacity: 70%;
 }
 .curr{
-    font-size: 35px;
+    font-size: 30px;
 }
 /* buttons */
 button{
-    background-color: rgba(37, 37, 37, 0.521);
+    background-color:rgb(139, 188, 245);
     color: white;
     font-family: 'Hind', helvetica;
     font-size: 30px;
-    border-style: inset;
     padding-right: 20px;
     padding-left: 20px;
-    transition-duration: 0.4s;
     cursor: pointer; 
+    border: none;
 }
-button:hover {
-    background-color: rgb(70, 96, 102); /* Green */
+/* button:hover {
+    background-color: rgb(70, 96, 102);
     color: #a1adbb;
     border-style: inset;
     border-width: 5px;
     cursor: pointer; 
-}
+} */
 
 /* button:active {
 background-color: #272f38;
@@ -85,13 +91,14 @@ transform: translateY(4px);
 
 /* For Button clicks */
 #buttonClicked{
-    background-color: rgb(219, 219, 219); 
+    background-color: rgb(47, 139, 245); 
     color: black;
-    border-style: inset;
-    box-shadow: 0 5px #666;
+    border-style: none;
+    box-shadow: 3px 3px #666;
     transform: translateY(4px);
-    border-width: 5px;
+    border-width: 2px;
     cursor: pointer; 
+    
 }
 
 #buttonIncomplete {
