--- a/layout.css
+++ b/layout.css
@@ -3,16 +3,23 @@ html{
 	height: 100%;
 }
 body {
-	margin: 0;
+	margin: auto;
 	padding: 0;
 	border: none;
 	font-family: 'Hind', helvetica;
 	font-size: 20px;
 	color: #797878;
-	background: #272f38;
+	background: #000000;
 	letter-spacing: 0em;
 	font-weight: 300;
-	
+
+	top: 0;
+	left: 0;
+	display: flex;
+  	position: fixed;
+	width: 100%;
+  	height: 100%;
+
 }
 .page {
 	position: relative;
@@ -80,7 +87,7 @@ body {
 /* 2. Container */
 @media (max-width: 720px) {
 	.container {
-		width: 100% !important;
+		width: 50% !important;
 		text-align: center;
 		margin: auto;
 	}
@@ -91,17 +98,24 @@ body {
 		margin-top: 18px !important; 
 		margin-bottom: 18px !important; 
 	}
+	body {
+		width: 720px !important;
+	}
 }
 .container {
-	width: 70%;
+	width: 25%;
 	text-align: center;
 	margin: auto;
 }
 
 .fw {
-
+	margin: auto;
 	position: relative;
-	min-width: 1020px;
+	width: 100%;
+	border-style: double;
+	border-width: 5px;
+	border-radius: 5%;
+	background-color: rgb(139, 188, 245);
 }
 
 
