--- a/calc.css
+++ b/calc.css
@@ -10,31 +10,28 @@ h3 {
 /* Inputs */
 @media (max-width: 720px) {
     button{
-        background-color:rgba(37, 37, 37, 0.521); ;
-        color: white;
-        font-family: 'Hind', helvetica;
-        font-size: 10px;
-        border-style: inset;
-        padding-right: 10px;
-        padding-left: 10px;
-        font-size: 26px !important;
+        font-size: 10px !important;
+ 
+        font-size: 20px !important;
         padding-right: 15px !important;
         padding-left: 15px !important; 
+        padding-top: 15px !important;
+        padding-bottom: 15px !important;
     }
     .row {
         line-height: 55px;
         margin: 0, auto;
     }
-    .h3Enter {
-        width: 95% !important;
-    }
-    .Enter {
-        width: 95% !important;
-    }
     #buttonClicked{
         transform: translateY(1px) !important;
         border-width: 1px !important;
-    
+    }
+    #display {
+        padding-right: 15px ;    
+        
+    }
+    .curr{
+        font-size: 25px !important;
     }
 }
 .input{
