--- a/layout.css
+++ b/layout.css
@@ -87,20 +87,14 @@ body {
 /* 2. Container */
 @media (max-width: 720px) {
 	.container {
-		width: 50% !important;
+		width: 70% !important;
 		text-align: center;
 		margin: auto;
 	}
 	.row {
-		line-height: 20px !important;
+		line-height: 50px !important;
 	}
-	h3 {
-		margin-top: 18px !important; 
-		margin-bottom: 18px !important; 
-	}
-	body {
-		width: 720px !important;
-	}
+
 }
 .container {
 	width: 25%;
@@ -122,6 +116,26 @@ body {
 @media (max-width: 1080px) {
 	.fw {
 		min-width: 100%;
+	}
+	button{
+        font-size: 10px !important;
+        font-size: 20px !important;
+        padding-right: 15px !important;
+        padding-left: 15px !important; 
+        padding-top: 10px !important;
+        padding-bottom: 10px !important;
+    }
+    .row {
+        line-height: 54px;
+        margin: 0, auto;
+    }
+    #buttonClicked{
+        transform: translateY(1px) !important;
+        border-width: 1px !important;
+    }
+	.container{
+		width: 40%;
+
 	}
 
 }
