--- a/calc.css
+++ b/calc.css
@@ -53,8 +53,11 @@ h3 {
     
 }
 .olds{
-    font-size: 20px;
+    font-size: 15px;
     opacity: 70%;
+}
+.curr_rep{
+    font-size: 20px;
 }
 .curr{
     font-size: 30px;
