--- a/calc.css
+++ b/calc.css
@@ -84,7 +84,7 @@ button{
     height:40px;
     border-radius: 20%;
 }
-#enter{
+.enter{
     width: 120px !important;
 }
 /* button:hover {
@@ -111,7 +111,19 @@ transform: translateY(4px);
     transform: translateY(4px);
     border-width: 2px;
     cursor: pointer; 
-    
+    width: 60px;
+    height:40px;
+}
+#enterClicked{
+    background-color: rgb(53, 54, 56); 
+    color: black;
+    border-style: none;
+    box-shadow: 3px 3px #666;
+    transform: translateY(4px);
+    border-width: 2px;
+    cursor: pointer; 
+    width: 120px !important;
+    height:40px;
 }
 
 #buttonIncomplete {
