--- a/calc.css
+++ b/calc.css
@@ -37,6 +37,9 @@ h3 {
     .by {
         font-size: 10px !important;
     }
+    .Backspace{
+        font-size: 30px !important;
+    }
 }
 .input{
     height: 50px;
