--- a/graphing.css
+++ b/graphing.css
@@ -50,6 +50,7 @@ input{
     letter-spacing: 1px;
     color:rgb(5, 82, 117);
     background-color: white;
+	opacity: 80%;
     font-family: 'Courier New', Courier, monospace;
 }
 .Graph{
@@ -67,10 +68,10 @@ input{
 
     margin-left: 2px;
     margin-right: 2px;
-    margin-top: 10px;
+   
     text-align: right;
     font-size: 17px;
-    border-radius: 5%;
+    border-radius: 5%
     
 }
 .olds{
@@ -158,6 +159,8 @@ body {
 	border-style: double;
 	border-width: 5px;
 	border-radius: 5%;
+	border-top-left-radius: 0%;
+	border-top-right-radius: 0%;
 	background-color: black;
 }
 
