--- a/calc.css
+++ b/calc.css
@@ -8,6 +8,11 @@ h3 {
     margin-bottom: 2px;
     overflow: hidden;
 }
+.Gh3 {
+    margin-top: 5px !important;
+    margin-bottom: 0 !important;
+    overflow: hidden !important;
+}
 /* Inputs */
 @media (max-width: 720px) {
     button{
@@ -61,7 +66,13 @@ h3 {
     color: rgb(0, 0, 0);
     padding-right: 20px ;
     border-radius: 10%;
-    
+}
+#Gdisplay {
+    margin-left: 2px;
+    margin-right: 2px;
+    text-align: right;
+    font-size: 17px;
+    border-radius: 5% 
 }
 .olds{
     font-size: 15px;
@@ -146,20 +157,45 @@ transform: translateY(4px);
     
 }
 
-/* Iframe Turn On Calculator*/
-#frame{
-    opacity: 100% !important;
-    position: absolute !important;
-    z-index: 1 !important;
-}
-#main{
-    opacity: 0% !important;
-    z-index: 0 !important;
+
+
+
+/* Desmos setting */
+#desmos{
+    height: 100%;
+    width: 100%;
 }
 
-/* Default iframe set up hidden*/
-iframe{
-    position: absolute;
-    z-index: 0;
-    opacity: 0% !important;
+.dcg-left-buttons{
+	display: none  !important;
+}
+.dcg-action-toggle-edit{
+	display: none  !important;
+}
+.dcg-center-buttons{
+	display: none  !important;
+}
+.dcg-overgraph-icon-container.dcg-bottom-right{
+	right: auto !important;
+	padding-left: 5px;
+}
+.dcg-icon-desmos {
+	display: none  !important;
+}
+.dcg-powered-by{
+	display: none  !important;
+}
+.dcg-expressions-branding {
+	display: none  !important;
+}
+.Graph{
+    width: 120px !important;
+}
+
+/* Flips the two calculators */
+#erase{
+    display: none !important;
+}
+#show{
+    display: block !important;
 }
