--- a/layout.css
+++ b/layout.css
@@ -114,7 +114,41 @@ body {
 	border-width: 5px;
 	border-radius: 5%;
 	background-color: black;
+	position: relative;
+	animation-duration: 2s;
 }
+/* Graph animation */
+.Graphing{
+	animation-name: graphin;
+}
+
+.calculator{
+	animation-name: calcin;
+}
+.GraphingOut{
+	animation-name: graphout;
+}
+.calculatorOut{
+	animation-name: graphin;
+}
+@keyframes graphin {
+  0%  {bottom: 500px;}
+  100%   {bottom: 0px;}
+}
+
+@keyframes calcin {
+	0%  {top: 500px;}
+	100%   {top: 0px;}
+}
+
+@keyframes calcout {
+
+}
+
+@keyframes graphout {
+
+}
+
 
 
 @media (max-width: 1080px) {
